--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,3 @@
 ---
-title: "Python Portfolio"
+title: "Python Data Science Portfolio"
 ---
-
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
