--- a/projects/death_rates/death_rates.qmd
+++ b/projects/death_rates/death_rates.qmd
@@ -10,10 +10,12 @@ toc: true
 import polars as pl
 import seaborn as sns
 import matplotlib as plt
+from mplstyle import mplstyle_from_brand
+from brand_yml import Brand
 
 from pyprojroot.here import here
 
-
+mplstyle_from_brand(here("_brand.yml"))
 
 ```
 
