--- a/projects.qmd
+++ b/projects.qmd
@@ -2,11 +2,10 @@
 title: "Python Data Science Projects"
 listing:
   contents: projects
-  sort: "date desc"
   type: default
   categories: true
-  sort-ui: true
-  filter-ui: true
+  sort-ui: false
+  filter-ui: false
 page-layout: full
 title-block-banner: true
 ---
